cabal-version:      2.4
name:               tree-sitter-erlang
version:            0.1.0.0
description:        This package provides a parser for Erlang suitable for use with the tree-sitter package.
author:             Thales Macedo Garitezi
maintainer:         thalesmg@gmail.com
license:            BSD-3-Clause
homepage:           https://github.com/thalesm/haskell-tree-sitter-erlang
category:           Tree-sitter, Erlang
extra-source-files: CHANGELOG.md
data-files:          vendor/tree-sitter-erlang/src/node-types.json
                   , vendor/tree-sitter-erlang/test/corpus/*.txt

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
    import: common
    exposed-modules:  TreeSitter.Erlang
    autogen-modules:  Paths_tree_sitter_erlang
    other-modules:    Paths_tree_sitter_erlang
    build-depends:    base >= 4.12 && < 5
                    , tree-sitter ^>=0.9.0.0
    -- hs-source-dirs:   src
    default-language: Haskell2010
    Include-dirs:     vendor/tree-sitter-erlang/src
    install-includes: tree_sitter/parser.h
    c-sources:        vendor/tree-sitter-erlang/src/parser.c
    extra-libraries:  stdc++
